jilles      2005/10/25 22:48:47 UTC	(20051025-3205)
  Log:
  Support COLLIDE (some kind of quieter form of kill
  designed for services) by treating it as KILL (with
  optional reason field).
  

  Changes:	Modified:
  +5 -0		trunk/protocol/hyperion.c (File Modified) 


jilles      2005/10/25 22:22:40 UTC	(20051025-3203)
  Log:
  Make services be reintroduced and rejoin all channels they
  were in when killed.
  Add void handle_kill(char *origin, char *victim, char *reason)
  to src/ptasks.c and make all protocol modules use it.
  

  Changes:	Modified:
  +1 -0		trunk/include/extern.h (File Modified) 
  +3 -28	trunk/protocol/asuka.c (File Modified) 
  +3 -28	trunk/protocol/bahamut.c (File Modified) 
  +3 -28	trunk/protocol/bircd.c (File Modified) 
  +3 -28	trunk/protocol/charybdis.c (File Modified) 
  +3 -28	trunk/protocol/dreamforge.c (File Modified) 
  +3 -28	trunk/protocol/hyperion.c (File Modified) 
  +3 -28	trunk/protocol/inspircd.c (File Modified) 
  +3 -28	trunk/protocol/ircnet.c (File Modified) 
  +3 -28	trunk/protocol/monkey.c (File Modified) 
  +3 -28	trunk/protocol/plexus.c (File Modified) 
  +3 -28	trunk/protocol/ptlink.c (File Modified) 
  +3 -28	trunk/protocol/ratbox.c (File Modified) 
  +3 -28	trunk/protocol/scylla.c (File Modified) 
  +3 -28	trunk/protocol/shadowircd.c (File Modified) 
  +3 -28	trunk/protocol/sorcery.c (File Modified) 
  +3 -28	trunk/protocol/ultimate3.c (File Modified) 
  +3 -28	trunk/protocol/undernet.c (File Modified) 
  +3 -28	trunk/protocol/unreal.c (File Modified) 
  +31 -0	trunk/src/ptasks.c (File Modified) 


alambert    2005/10/25 17:57:42 UTC	(20051025-3201)
  Log:
  rename topic_set to channel_topic

  Changes:	Modified:
  +1 -1		trunk/doc/HOOKS (File Modified) 


alambert    2005/10/25 17:57:14 UTC	(20051025-3199)
  Log:
  rename topic_set to channel_topic

  Changes:	Modified:
  +2 -2		trunk/modules/chanserv/set.c (File Modified) 
  +1 -1		trunk/src/ptasks.c (File Modified) 

